--- a/WebApp/Views/Account/_ForgotPasswordModal.cshtml
+++ b/WebApp/Views/Account/_ForgotPasswordModal.cshtml
@@ -4,8 +4,8 @@
     <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content">
             <div class="modal-header border-0">
-                <h5 class="modal-title text-[#343131]" id="resetPasswordModalLabel">
-                    <i class="fa-solid fa-key px-1 text-[#A04747]"></i>
+                <h5 class="modal-title flex text-[#343131]" id="resetPasswordModalLabel">
+                    @Html.Raw(Resources.Constants.SvgIcons.ModalResetPasswordIcon)
                     Reset Your Password
                 </h5>
                 <button type="button" class="close text-gray-500 hover:text-gray-700" data-dismiss="modal" aria-label="Close">
