--- a/WebApp/Views/Company/RegisterCompany.cshtml
+++ b/WebApp/Views/Company/RegisterCompany.cshtml
@@ -13,7 +13,7 @@
                 <div>
                     <button onclick="location.href='@Url.Action("RequestJoinCompany", "Company")'"
                             class="text-grey-700 w-full cursor-pointer hover:text-[#A53D3D] focus:outline-none">
-                        <i class="fa-solid fa-arrow-right-to-bracket"></i> Join Existing Company
+                        Join Existing Company
                     </button>
                 </div>
             </div>
