--- a/WebApp/Views/Home/Index.cshtml
+++ b/WebApp/Views/Home/Index.cshtml
@@ -31,7 +31,7 @@
 
             <!-- Right Image -->
             <div class="mt-1 flex w-1/2 justify-end">
-                <img src="/img/hero.png" alt="Illustration" class="full">
+                <img src="/img/hero.webp" alt="Illustration" class="full">
             </div>
         </div>
     </div>
