--- a/WebApp/Views/Job/_UnarchiveJobModal.cshtml
+++ b/WebApp/Views/Job/_UnarchiveJobModal.cshtml
@@ -28,7 +28,7 @@
 
             <div class="modal-footer mt-2 !border-none">
                 <button type="button" class="min-w-[128px] rounded-md bg-[#6c757d] px-3 py-2 font-medium text-white hover:bg-[#939BA2]" id="cancelUnarchiveJob" data-dismiss="modal">Cancel</button>
-                <button type="submit" class="min-w-[128px] rounded-md bg-[#7A1515] px-3 py-2 font-medium text-white hover:bg-[#A04747]" onclick="submitUnarchiveJob()">Unarchive</button>
+                <button type="submit" class="min-w-[128px] rounded-md bg-[#7A1515] px-3 py-2 font-medium text-white hover:bg-[#A04747] disabled:bg-gray-400" onclick="submitUnarchiveJob()" id="unarchiveJobBtn">Unarchive</button>
             </div>
         </div>
     </div>
