--- a/WebApp/Views/Shared/_LogoutModal.cshtml
+++ b/WebApp/Views/Shared/_LogoutModal.cshtml
@@ -2,8 +2,8 @@
     <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content">
             <div class="modal-header border-0">
-                <h5 class="modal-title text-[#343131]" id="logoutModalLabel">
-                    <i class="fa fa-hourglass-half px-1 text-[#A04747]"></i>
+                <h5 class="modal-title flex items-center text-[#343131]" id="logoutModalLabel">
+                    @Html.Raw(Resources.Constants.SvgIcons.ModalLogoutIcon)
                     Log out
                 </h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
