--- a/WebApp/Views/User/_ResetPasswordModal.cshtml
+++ b/WebApp/Views/User/_ResetPasswordModal.cshtml
@@ -3,7 +3,7 @@
         <div class="modal-content">
             <div class="modal-header border-0">
                 <h5 class="modal-title text-[#343131]" id="resetPasswordModalLabel">
-                    <i class="fa fa-exclamation-triangle px-1 text-[#A04747]"></i>
+                    @Html.Raw(Resources.Constants.SvgIcons.ModalDeleteIcon)
                     Confirm Reset Password
                 </h5>
                 <button type="button" class="close" data-dismiss="modal">
