--- a/WebApp/Views/UserProfile/_ProfileSection.cshtml
+++ b/WebApp/Views/UserProfile/_ProfileSection.cshtml
@@ -19,8 +19,8 @@
                 Save Changes
             </button>
             <button type="button" onclick="enableEditMode()" id="editButton"
-                    class="rounded-md bg-[#7A1515] px-4 py-2 font-semibold text-white hover:bg-[#A53D3D]">
-                <i class="fas fa-edit pr-1"></i> Update
+                    class="flex items-center rounded-md bg-[#7A1515] px-4 py-2 font-semibold text-white hover:bg-[#A53D3D]">
+                @Html.Raw(Resources.Constants.SvgIcons.UpdateIcon) Update
             </button>
         </div>
     </div>
