--- a/WebApp/Views/Application/Index.cshtml
+++ b/WebApp/Views/Application/Index.cshtml
@@ -3,6 +3,7 @@
 @using Services.ServiceModels
 @using System.Text.Json;
 @using Humanizer
+@using static Resources.Constants.SvgIcons
 
 @{
     ViewData["Title"] = "Application List";
@@ -47,7 +48,7 @@
                 {
                     <form method="get" asp-action="@aspAction">
                         <button type="submit" class="rounded bg-gray-300 px-2 py-1 text-white">
-                            <i class="fa-solid fa-xmark"></i>
+                            &times;
                         </button>
                     </form>
                 }
@@ -75,8 +76,8 @@
                             WorkSetupFilter = filterByWorkSetup,
                             StatusFilter = filterByStatus,
                         })'"
-                    class="w-full max-w-[200px] cursor-pointer text-right text-[#343131] hover:text-[#A04747] focus:outline-none">
-                <i class="fa fa-archive"></i> Archived Applications
+                    class="flex w-full max-w-[200px] cursor-pointer items-center justify-end text-right text-[#343131] hover:text-[#A04747] focus:outline-none">
+                @Html.Raw(ArchiveIcon) Archived Applications
             </button>
         </div>
         <table class="min-w-full table-auto rounded-lg bg-white">
@@ -95,33 +96,45 @@
             @if (Model.HasPreviousPage)
             {
                 <li class="page-item">
-                    <a class="page-link border border-red-300 px-3 py-1 text-gray-700 hover:bg-gray-200"
-                       asp-action="@aspAction"
-                       asp-route-pageIndex="@(Model.PageIndex - 1)"
-                       asp-route-search="@search">
-                        <i class="fas fa-chevron-left"></i>
+                    <a class="page-link flex items-center border px-3 py-1 !text-[#7A1515] hover:!text-[#A04747]"
+                       asp-action="@aspAction" 
+                       asp-route-pageIndex="@(Model.PageIndex - 1)" 
+                       asp-route-sortBy="@sortBy"
+                       asp-route-search="@search"
+                       asp-route-programFilter="@filterByProgram"
+                       asp-route-workSetupFilter="@filterByWorkSetup"
+                       asp-route-statusFilter="@filterByStatus">
+                        @Html.Raw(PaginationLeft)
                     </a>
                 </li>
             }
             @for (int i = 1; i <= Model.TotalPages; i++)
             {
                 <li class="page-item @(i == Model.PageIndex ? "active" : "")">
-                    <a class="page-link border px-3 py-1 @(i == Model.PageIndex ? "bg-blue-500 text-white" : "text-gray-700 hover:bg-gray-200")"
-                       asp-action="@aspAction"
-                       asp-route-pageIndex="@i"
-                       asp-route-search="@search">
-                        @i
+                    <a class="page-link border px-3 py-1 @(i == Model.PageIndex ? "!text-white hover:!bg-[#A04747]" : "!text-[#7A1515] hover:!text-[#A04747]")"
+                       asp-action="@aspAction" 
+                       asp-route-pageIndex="@i" 
+                       asp-route-sortBy="@sortBy" 
+                       asp-route-search="@search"
+                       asp-route-programFilter="@filterByProgram"
+                       asp-route-workSetupFilter="@filterByWorkSetup"
+                       asp-route-statusFilter="@filterByStatus">
+                         @i
                     </a>
                 </li>
             }
             @if (Model.HasNextPage)
             {
                 <li class="page-item">
-                    <a class="page-link border border-red-300 px-3 py-1 text-gray-700 hover:bg-gray-200"
-                       asp-action="@aspAction"
-                       asp-route-pageIndex="@(Model.PageIndex + 1)"
-                       asp-route-search="@search">
-                        <i class="fas fa-chevron-right"></i>
+                    <a class="page-link border px-3 py-1 !text-[#7A1515] hover:!text-[#A04747]"
+                       asp-action="@aspAction" 
+                       asp-route-pageIndex="@(Model.PageIndex + 1)" 
+                       asp-route-sortBy="@sortBy" 
+                       asp-route-search="@search"
+                       asp-route-programFilter="@filterByProgram"
+                       asp-route-workSetupFilter="@filterByWorkSetup"
+                       asp-route-statusFilter="@filterByStatus">
+                        @Html.Raw(PaginationRight)
                     </a>
                 </li>
             }
