--- a/WebApp/Views/Application/ViewApplication.cshtml
+++ b/WebApp/Views/Application/ViewApplication.cshtml
@@ -2,6 +2,7 @@
 @using Data.Models;
 @using Humanizer;
 @using System.Text.Json;
+@using static Resources.Constants.SvgIcons
 
 @{
     ViewData["Title"] = $"{Model.Job.Title} Application | GradSync";
@@ -13,7 +14,7 @@
         <div class="w-full rounded-lg bg-white p-6 px-12 shadow-sm">
             <div class="flex justify-between">
                 <button type="button" id="back-button" class="flex items-center text-xs font-semibold text-[#7A1515] hover:text-[#A04747] focus:!outline-none">
-                    <i class="fas fa-arrow-left mr-2"></i> Back
+                    @Html.Raw(BackIcon)Back
                 </button>
             </div>
 
@@ -38,7 +39,7 @@
                         <button class="rounded bg-[#7A1515] px-4 py-2 font-semibold text-white hover:bg-[#A04747]"
                                 data-toggle="modal"
                                 data-target="#">
-                            <i class="fa-solid fa-arrows-rotate pr-2"></i> Update Status
+                            Update Status
                         </button>
                     }
                 </div>
