--- a/WebApp/Views/Application/_ApplicationTableBody.cshtml
+++ b/WebApp/Views/Application/_ApplicationTableBody.cshtml
@@ -1,4 +1,5 @@
 ﻿@model Services.ServiceModels.PaginatedList<Services.ServiceModels.ApplicationViewModel>
+@using static Resources.Constants.SvgIcons
 
 @{
     ViewData["Title"] = "Application List";
@@ -142,13 +143,12 @@ else
                 <div class="relative">
                     <button data-applicationid="@item.ApplicationId"
                             class="actionDropdownApplicationBtn cursor-pointer px-6 text-black hover:text-[#A53D3D] focus:outline-none">
-                        <i class="fas fa-ellipsis-v"></i>
+                        @Html.Raw(EllipsisVIcon)
                     </button>
 
                     <div id="actionDropdownApplicationMenu-@item.ApplicationId"
                          class="actionDropdownApplicationMenu z-10 ring-1 ring-opacity-5 absolute right-0 mt-2 hidden w-48 origin-top-right rounded-md bg-white text-left shadow-lg ring-black">
-                        <div class="space-y-1 py-1">
-
+                        <div class="space-y-1 whitespace-nowrap py-1">
                             <!-- Application Details -->
                             <button onclick="location.href='@Url.Action("GetApplication", "Application",
                                                                 new {
@@ -160,22 +160,23 @@ else
                                                                     filterByProgram = filterByProgram,
                                                                     filterByStatus = filterByStatus,
                                                                 })'"
-                                    class="text-grey-700 w-full cursor-pointer px-4 py-2 text-left text-sm hover:text-[#A53D3D] focus:outline-none">
-                                <i class="fas fa-info-circle mr-2"></i> Details
+                                    class="text-grey-700 flex w-full cursor-pointer items-center px-4 py-2 text-left text-sm hover:text-[#A53D3D] focus:outline-none">
+                                @Html.Raw(DetailsIcon)Details
                             </button>
 
-                            <button class="update-job-status text-grey-700 w-full cursor-pointer px-4 py-2 text-left text-sm hover:text-[#A53D3D] focus:outline-none disabled:cursor-not-allowed disabled:text-gray-400"
+                            <!-- Update Job Status -->
+                            <button class="update-job-status text-grey-700 flex w-full cursor-pointer items-center px-4 py-2 text-left text-sm hover:text-[#A53D3D] focus:outline-none disabled:cursor-not-allowed disabled:text-gray-400"
                                     data-applicationid="@item.ApplicationId"
                                     data-statusid="@item.ApplicationStatusTypeId"
                                     data-toggle="modal"
                                     data-target="#updateApplicationStatusModal">
-                                <i class="fa-solid fa-rotate mr-2"></i>Update Status
+                                @Html.Raw(UpdateStatusIcon)Update Status
                             </button>
 
                             <!-- Archive Job -->
                             <button onclick=" displayDeleteModal('@item.ApplicationId' , '@item.Job.Title')"
-                                    class="text-grey-700 w-full cursor-pointer px-4 py-2 text-left text-sm hover:text-[#A53D3D] focus:outline-none">
-                                <i class="fas fa-archive mr-2"></i> Archive
+                                    class="text-grey-700 flex w-full cursor-pointer items-center px-4 py-2 text-left text-sm hover:text-[#A53D3D] focus:outline-none">
+                                @Html.Raw(ArchiveIcon)Archive
                             </button>
                         </div>
                     </div>
