--- a/WebApp/Views/Job/IndexArchived.cshtml
+++ b/WebApp/Views/Job/IndexArchived.cshtml
@@ -2,6 +2,7 @@
 @using Data.Models
 @using Humanizer
 @using System.Text.Json;
+@using static Resources.Constants.SvgIcons
 
 @{
     ViewData["Title"] = "Archived Jobs | GradSync";
@@ -32,7 +33,7 @@
 <div class="h-full w-full p-6 shadow-md">
     <div class="mb-2 flex">
         <a href="#" id="back-button" class="flex items-center text-xs font-semibold text-[#7A1515] hover:text-[#A04747] hover:!no-underline">
-            <i class="fas fa-arrow-left mr-2"></i> Back
+            @Html.Raw(BackIcon) Back
         </a>
     </div>
     <div class="flex items-center justify-between">
@@ -67,9 +68,9 @@
                         <a asp-action="@aspAction"
                            asp-route-search="@search"
                            asp-route-sortBy="@sortByUpdated"
-                           class="text-[#625f5f] hover:!no-underline hover:text-[#A04747] @(sortBy == "updated_asc" || sortBy == "updated_desc" ? "text-[#A04747]" : "")">
+                           class="flex items-center text-[#625f5f] hover:!no-underline hover:text-[#A04747] @(sortBy == "updated_asc" || sortBy == "updated_desc" ? "text-[#A04747]" : "")">
                             Date Archived
-                            @(sortBy == "updated_asc" ? Html.Raw("<i class='fa-solid fa-sort-up'></i>") : (sortBy == "updated_desc" ? Html.Raw("<i class='fa-solid fa-sort-down'></i>") : Html.Raw("<i class='fa-solid fa-sort'></i>")))
+                            @(sortBy == "updated_asc" ? Html.Raw(SortUpIcon) : (sortBy == "updated_desc" ? Html.Raw(SortDownIcon) : Html.Raw(SortIcon)))
                         </a>
                     </th>
                     <!-- Action-->
@@ -104,8 +105,9 @@
                             <td>
 
                                 <button data-toggle="modal" data-target="#unarchiveJobModal" data-job-id="@item.JobId" data-postedby-id="@item.PostedById"
-                                        class="text-grey-700 w-full cursor-pointer px-4 py-2 text-left text-sm hover:text-[#A04747] focus:outline-none">
-                                    <i class="fa-solid fa-box-open mr-2"></i> Unarchive Job
+                                        class="text-grey-700 flex w-full cursor-pointer items-center px-4 py-2 text-left text-sm hover:text-[#A04747] focus:outline-none">
+                                    @Html.Raw(ArchiveUndoIcon)
+                                    Unarchive Job
                                 </button>
                             </td>
                         </tr>
@@ -120,19 +122,19 @@
             @if (Model.HasPreviousPage)
             {
                 <li class="page-item">
-                    <a class="page-link border border-red-300 px-3 py-1 text-[#625f5f] hover:bg-gray-200"
+                    <a class="page-link flex items-center border px-3 py-1 !text-[#7A1515] hover:!text-[#A04747]"
                        asp-action="@aspAction"
                        asp-route-pageIndex="@(Model.PageIndex - 1)"
                        asp-route-sortBy="@sortBy"
                        asp-route-search="@search">
-                        <i class="fas fa-chevron-left"></i>
+                        @Html.Raw(PaginationLeft)
                     </a>
                 </li>
             }
             @for (int i = 1; i <= Model.TotalPages; i++)
             {
                 <li class="page-item @(i == Model.PageIndex ? "active" : "")">
-                    <a class="page-link border px-3 py-1 @(i == Model.PageIndex ? "bg-blue-500 text-white" : "text-gray-700 hover:bg-gray-200")"
+                    <a class="page-link border px-3 py-1 @(i == Model.PageIndex ? "!text-white hover:!bg-[#A04747]" : "!text-[#7A1515] hover:!text-[#A04747]")"
                        asp-action="@aspAction"
                        asp-route-pageIndex="@i"
                        asp-route-sortBy="@sortBy"
@@ -144,12 +146,12 @@
             @if (Model.HasNextPage)
             {
                 <li class="page-item">
-                    <a class="page-link border border-red-300 px-3 py-1 text-[#625f5f] hover:bg-gray-200"
+                    <a class="page-link border px-3 py-1 !text-[#7A1515] hover:!text-[#A04747]"
                        asp-action="@aspAction"
                        asp-route-pageIndex="@(Model.PageIndex + 1)"
                        asp-route-sortBy="@sortBy"
                        asp-route-search="@search">
-                        <i class="fas fa-chevron-right"></i>
+                        @Html.Raw(PaginationRight)
                     </a>
                 </li>
             }
@@ -203,9 +205,12 @@
 
         function submitUnarchiveJob() {
             var form = $('#unarchiveJobForm');
+            var button = document.getElementById('unarchiveJobBtn');
+            button.disabled = true;
 
             form.validate();
             if (!form.valid()) {
+                button.disabled = false;
                 return;
             }
 
@@ -222,6 +227,7 @@
                         window.location.href = baseUrl;
                     } else {
                         var errorMessage = response.error || "An error occurred.";
+                        button.disabled = false;
                         toastr.error(errorMessage);
                     }
                 }
