--- a/WebApp/Views/Job/_InfoTab.cshtml
+++ b/WebApp/Views/Job/_InfoTab.cshtml
@@ -1,6 +1,7 @@
 ﻿@using Microsoft.AspNetCore.Http
 @inject IHttpContextAccessor HttpContextAccessor
 @using Data.Models 
+@using static Resources.Constants.SvgIcons
 
 @{
     string GetEmploymentTypeColor(string employmentType)
@@ -18,17 +19,17 @@
 
 <div class="overflow-auto rounded-lg border border-gray-200 bg-white p-6 shadow-md">
     <div class="flex items-center justify-between pb-2 text-sm font-normal">
-        <div>
-            <i class="fas fa-map-marker-alt pr-1 text-sm"></i>
+        <div class="flex items-center">
+            @Html.Raw(LocationIcon)
             @Model.Location
         </div>
 
         <!-- Status and Employment Type Badge -->
-        <div class="flex items-center text-gray-900 space-x-1">
-            <span class="border-2 rounded-md border-green-500 px-2 py-1 pr-2 text-xs font-medium text-gray-900 whitespace-nowrap">
+        <div class="flex items-center space-x-1 text-gray-900">
+            <span class="border-2 whitespace-nowrap rounded-md border-green-500 px-2 py-1 pr-2 text-xs font-medium text-gray-900">
                 @Model.StatusType.Name
             </span>
-            <span class="border-2 rounded-md px-2 py-1 text-xs font-medium text-gray-900 whitespace-nowrap"
+            <span class="border-2 whitespace-nowrap rounded-md px-2 py-1 text-xs font-medium text-gray-900"
                 style="background-color:@GetEmploymentTypeColor(Model.EmploymentType.Name);">
                 @Model.EmploymentType.Name
             </span>   
@@ -43,18 +44,24 @@
 
         <ul class="space-y-4 text-sm text-gray-700">
             <li class="gap-2">
-                <i class="fas fa-clock text-lg"></i>
-                <span class="pl-2 font-semibold">Schedule:</span>
-                <span>@Model.Schedule</span>
+                <div class="flex items-center">
+                    @Html.Raw(ScheduleIcon)
+                    <span class="pl-2 pr-1 font-semibold">Schedule:</span>
+                </div>
+                <span class="pl-8">@Model.Schedule</span>
             </li>
             <li class="gap-2">
-                <i class="fas fa-graduation-cap text-lg"></i>
-                <span class="pl-1 font-semibold">Year Level:</span>
-                <span>@Model.YearLevel.Name</span>
+                <div class="flex items-center">
+                    @Html.Raw(YearLevelIcon)
+                    <span class="pl-1 pr-1 font-semibold">Year Level:</span>
+                </div>
+            <span class="pl-8">@Model.YearLevel.Name</span>
             </li>
-            <li class="gap-2">
-                <i class="fas fa-university text-lg"></i>
-            <span class="pl-2 font-semibold">Programs:</span>
+            <li class="max-w-96 gap-2">
+                <div class="flex items-center">
+                    @Html.Raw(ProgramsIcon)
+                    <span class="pl-2 pr-1 font-semibold">Programs:</span>
+                </div>
                 <div class="pl-8">@string.Join(", ", (Model.Programs as List<Program>).Select(program => program.Name))</div>
             </li>
         </ul>
