--- a/WebApp/Views/Job/_JobTableHeader.cshtml
+++ b/WebApp/Views/Job/_JobTableHeader.cshtml
@@ -1,5 +1,6 @@
 ﻿@model Services.ServiceModels.PaginatedList<Services.ServiceModels.JobViewModel>
 @using Data.Models
+@using static Resources.Constants.SvgIcons
 
 @{
     var companies = ViewBag.Companies as List<Company>;
@@ -35,7 +36,7 @@
         <!-- Company Column (with dropdown) -->
         <th class="px-3 py-3 text-xs font-medium uppercase tracking-wider text-[#625f5f]">
             <div class="dropdown relative">
-                <a class="cursor-pointer text-[#625f5f] hover:!no-underline hover:text-[#A04747] @(!string.IsNullOrEmpty(filterByCompany) ? "text-[#A04747]" : "")" href="#" id="companyDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <a class="flex cursor-pointer items-center text-[#625f5f] hover:!no-underline hover:text-[#A04747] @(!string.IsNullOrEmpty(filterByCompany) ? "text-[#A04747]" : "")" href="#" id="companyDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     @if (filterByCompany == null)
                     {
                         @Html.DisplayNameFor(model => model.First().Company)
@@ -44,7 +45,7 @@
                     {
                         <text>@filterByCompany</text>
                     }
-                    <i class="fa-solid fa-chevron-down"></i>
+                    @Html.Raw(DropdownIcon)
                 </a>
 
                 <div class="dropdown-menu absolute hidden max-h-[200px] space-y-2 overflow-y-auto pt-1 text-[#625f5f]" aria-labelledby="companyDropdown">
@@ -86,7 +87,7 @@
     <!-- Employment Type Column (with dropdown) -->
     <th class="px-3 py-3 text-xs font-medium uppercase tracking-wider text-[#625f5f]">
         <div class="dropdown relative">
-            <a class="cursor-pointer text-[#625f5f] hover:!no-underline hover:text-[#A04747] @(!string.IsNullOrEmpty(filterByEmploymentType) ? "text-[#A04747]" : "")"
+            <a class="flex cursor-pointer items-center text-[#625f5f] hover:!no-underline hover:text-[#A04747] @(!string.IsNullOrEmpty(filterByEmploymentType) ? "text-[#A04747]" : "")"
                 href="#" id="employmentTypeDropdown" 
                 data-toggle="dropdown" 
                 aria-haspopup="true" 
@@ -99,7 +100,7 @@
                 {
                     <text>@filterByEmploymentType</text>
                 }
-                <i class="fa-solid fa-chevron-down"></i>
+                @Html.Raw(DropdownIcon)
             </a>
             <div class="dropdown-menu absolute hidden max-h-[200px] space-y-2 overflow-y-auto pt-1 text-[#625f5f]" aria-labelledby="employmentTypeDropdown">
                 <a class="dropdown-item block px-4 text-sm hover:bg-gray-100"
@@ -131,7 +132,7 @@
     <!-- Status Type Column (with dropdown) -->
     <th class="px-6 py-3 text-xs font-medium uppercase tracking-wider text-[#625f5f]">
         <div class="dropdown relative">
-            <a class="cursor-pointer text-[#625f5f] hover:!no-underline hover:text-[#A04747] @(!string.IsNullOrEmpty(filterByStatusType) ? "text-[#A04747]" : "")" href="#" id="statusTypeDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a class="flex cursor-pointer items-center text-[#625f5f] hover:!no-underline hover:text-[#A04747] @(!string.IsNullOrEmpty(filterByStatusType) ? "text-[#A04747]" : "")" href="#" id="statusTypeDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 @if (string.IsNullOrEmpty(filterByStatusType))
                 {
                     @Html.DisplayNameFor(model => model.First().StatusType)
@@ -140,7 +141,7 @@
                 {
                     <text>@filterByStatusType</text>
                 }
-                <i class="fa-solid fa-chevron-down"></i>
+                @Html.Raw(DropdownIcon)
             </a>
             <div class="dropdown-menu absolute hidden max-h-[200px] space-y-2 overflow-y-auto pt-1 text-[#625f5f]" aria-labelledby="statusTypeDropdown">
                 <a class="dropdown-item block px-4 text-sm hover:bg-gray-100"
@@ -172,7 +173,7 @@
     <!-- Work Setup Column (with dropdown) -->
     <th class="px-3 py-3 text-xs font-medium uppercase tracking-wider text-[#625f5f]">
         <div class="dropdown relative">
-            <a class="cursor-pointer text-[#625f5f] hover:!no-underline hover:text-[#A04747] @(!string.IsNullOrEmpty(filterByWorkSetup) ? "text-[#A04747]" : "")" 
+            <a class="flex cursor-pointer items-center text-[#625f5f] hover:!no-underline hover:text-[#A04747] @(!string.IsNullOrEmpty(filterByWorkSetup) ? "text-[#A04747]" : "")" 
                 href="#" id="workSetupDropdown" 
                 data-toggle="dropdown" 
                 aria-haspopup="true" 
@@ -185,7 +186,7 @@
                 {
                     <text>@filterByWorkSetup</text>
                 }
-                <i class="fa-solid fa-chevron-down"></i>
+                @Html.Raw(DropdownIcon)
             </a>
             <div class="dropdown-menu absolute hidden max-h-[200px] space-y-2 overflow-y-auto pt-1 text-[#625f5f]" aria-labelledby="workSetupDropdown">
                 <a class="dropdown-item block px-4 text-sm hover:bg-gray-100"
@@ -223,9 +224,9 @@
            asp-route-filterByEmploymentType="@filterByEmploymentType"
            asp-route-filterByStatusType="@filterByStatusType"
            asp-route-filterByWorkSetup="@filterByWorkSetup"
-           class="text-[#625f5f] hover:!no-underline hover:text-[#A04747] @(sortBy == "created_asc" || sortBy == "created_desc"? "text-[#A04747]" : "")">
+           class="flex items-center text-[#625f5f] hover:!no-underline hover:text-[#A04747] @(sortBy == "created_asc" || sortBy == "created_desc"? "text-[#A04747]" : "")">
             @Html.DisplayNameFor(model => model.First().CreatedDate)
-            @(sortBy == "created_asc" ? Html.Raw("<i class='fa-solid fa-sort-up'></i>") : (sortBy == "created_desc" ? Html.Raw("<i class='fa-solid fa-sort-down'></i>") : Html.Raw("<i class='fa-solid fa-sort'></i>")))
+            @(sortBy == "created_asc" ? Html.Raw(SortUpIcon) : (sortBy == "created_desc" ? Html.Raw(SortDownIcon) : Html.Raw(SortIcon)))
         </a>
     </th>
     <!-- Actiion-->
