--- a/WebApp/Views/Shared/_DeleteModal.cshtml
+++ b/WebApp/Views/Shared/_DeleteModal.cshtml
@@ -2,8 +2,8 @@
     <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
             <div class="modal-header border-0">
-                <h5 class="modal-title text-[#343131]" id="deleteModalLabel">
-                    <i class="fa fa-exclamation-triangle px-1 text-[#A04747]"></i>
+                <h5 class="modal-title flex items-center text-[#343131]" id="deleteModalLabel">
+                    @Html.Raw(Resources.Constants.SvgIcons.ModalDeleteIcon)
                     Confirm Delete
                 </h5>
                 <button type="button" class="close" data-dismiss="modal">
@@ -15,7 +15,7 @@
             </div>
             <div class="modal-footer mt-2 !border-none">
                 <button type="button" class="min-w-[128px] rounded-md bg-[#6c757d] px-3 py-2 font-medium text-white hover:bg-[#939BA2]" data-dismiss="modal">Cancel</button>
-                <button type="button" class="min-w-[128px] rounded-md bg-[#7A1515] px-3 py-2 font-medium text-white hover:bg-[#A53D3D]" id="confirmDeleteBtn">Delete</button>
+                <button type="button" class="min-w-[128px] rounded-md bg-[#7A1515] px-3 py-2 font-medium text-white hover:bg-[#A53D3D] disabled:bg-gray-400" id="confirmDeleteBtn">Delete</button>
             </div>
         </div>
     </div>
