--- a/WebApp/Views/UserProfile/ViewProfile.cshtml
+++ b/WebApp/Views/UserProfile/ViewProfile.cshtml
@@ -1,4 +1,5 @@
 ﻿@model Services.ServiceModels.UserProfileViewModel
+@using static Resources.Constants.SvgIcons
 
 @{
     ViewData["Title"] = "Profile | GradSync";
@@ -19,7 +20,9 @@
                         <div class="group relative mx-auto h-24 w-24">
                             <img id="profile-picture-preview" class="h-full w-full rounded-full object-cover shadow" src="https://via.placeholder.com/150" alt="Profile Picture" />
                             <div id="edit-icon" class="opacity-0 group-hover:opacity-100 pointer-events-none absolute inset-0 flex items-center justify-center transition-opacity duration-200">
-                                <i class="fas fa-pencil-alt rounded-full bg-white p-2 text-gray-500 shadow-md"></i>
+                                <div class="rounded-full bg-white p-2 text-gray-500 shadow-md">
+                                    @Html.Raw(UpdateProfilePictureIcon)
+                                </div>
                             </div>
                             <input type="file" id="profile-picture" name="ProfilePicture" class="opacity-0 absolute inset-0 h-full w-full cursor-pointer" accept="image/*" />
                         </div>
@@ -28,8 +31,16 @@
 
                         <!-- Save and Clear Buttons -->
                         <div id="save-clear-buttons" class="absolute right-0 top-0 flex hidden gap-2">
-                            <button id="save-profile-btn"><i class="fas fa-check rounded-full bg-white p-1 text-green-500 shadow-md"></i></button>
-                            <button id="clear-profile-btn"><i class="fas fa-times rounded-full bg-white p-1 text-red-500 shadow-md"></i></button>
+                            <button id="save-profile-btn">
+                                <div class="rounded-full bg-white p-1 text-green-500 shadow-md">
+                                    @Html.Raw(CheckMarkIcon)
+                                </div>
+                            </button>
+                            <button id="clear-profile-btn">
+                                <div class="rounded-full bg-white p-1 text-red-500 shadow-md">
+                                    @Html.Raw(XMarkIcon)
+                                </div>
+                            </button>
                         </div>
                     </div>
 
